--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/fivepapertigers/secret-santa#readme",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-bootstrap": "^0.12.2"
+    "angular-bootstrap": "^0.12.2",
+    "angular-route": "^1.5.8"
   },
   "devDependencies": {
     "angular-resource": "^1.5.8"
